Fixing overlapping header tabs.
git-svn-id: https://buddypress.svn.wordpress.org/trunk@2404 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/bp-themes/bp-default/_inc/css/default.css
+++ b/bp-themes/bp-default/_inc/css/default.css
@@ -128,17 +128,17 @@ ul#nav {
 	position: absolute;
 	right: 15px;
 	list-style: none;
-	bottom: 4px;
+	bottom: 0;
 }
-
 	ul#nav li {
 		float: left;
-		margin: 0 6px 0 0;
+		margin: 0 5px 0 0;
 	}
 		ul#nav li a {
+			display: block;
 			color: #fff;
 			text-decoration: none;
-			padding: 7px 15px;
+			padding: 5px 15px;
 			background: url( ../images/60pc_black.png );
 			-moz-border-radius-topleft: 3px;
 			-webkit-border-top-left-radius: 3px;
